--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@heroicons/react": "^2.0.18",
     "react-icons": "^4.12.0",
     "swiper": "^11.0.5",
-    "hamburger-react": "^2.4.1"
+    "hamburger-react": "^2.4.1",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
