--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "terser": "^5.24.0"
   }
 }
