--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.2.0",
-    "terser": "^5.24.0"
+    "terser": "^5.24.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   }
 }
